Fixed Mac download link

--- a/download/index.html
+++ b/download/index.html
@@ -35,7 +35,7 @@
 <ul>
 <li><a href="https://github.com/dungeons-of-moria/umoria/releases/download/v5.7.15/umoria-5-7-15-win32.zip">Umoria 5.7.15 Windows (32bit)</a></li>
 <li><a href="https://github.com/dungeons-of-moria/umoria/releases/download/v5.7.15/umoria-5-7-15-win64.zip">Umoria 5.7.15 Windows (64bit)</a></li>
-<li><a href="https://github.com/dungeons-of-moria/umoria/releases/download/v5.7.15/umoria-5-7-15-macos.gz">Umoria 5.7.15 macOS</a></li>
+<li><a href="https://github.com/dungeons-of-moria/umoria/releases/download/v5.7.15/umoria-5-7-15.macos.gz">Umoria 5.7.15 macOS</a></li>
 <li><a href="https://github.com/dungeons-of-moria/umoria" target="_blank">Umoria Source Code (Github)</a></li>
 </ul>
 
